--- a/I-4B-a10jesuslb_Nova/app/src/main/res/values/strings.xml
+++ b/I-4B-a10jesuslb_Nova/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">I-4B-a10jesuslb_Nova</string>
+    <string name="strShow">Show Dialog</string>
+    <string name="strFrag">Frag Dialog</string>
+    <string name="strEngade">Engade</string>
 </resources>
